--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suchitra Basak</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <!-- Add the link to your favicon -->
+    <link rel="icon" type="image/png" href="Images/wikicommons-transpride.png">
 </head>
 <body>
     <header>
