--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Suchitra Basak</title>
     <link rel="stylesheet" href="stylesheet.css">
     <!-- Add the link to your favicon -->
-    <link rel="icon" type="image/png" href="Images/wikicommons-transpride.png">
+    <link rel="shortcut icon" type="image/png" href="Images/wikicommons-transpride.png">
 </head>
 <body>
     <header>
