--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suchitra Basak</title>
     <link rel="stylesheet" href="stylesheet.css">
-    <!-- Add the link to your favicon -->
+    <!-- rel = "shortcut icon" for github pages-->
     <link rel="shortcut icon" type="image/png" href="Images/wikicommons-transpride.png">
 </head>
 <body>
