buttons open in new tab

--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
     </header>
     <main>
         <section class="links">
-            <a href="https://link.springer.com/book/10.1007/978-3-031-13909-3"><button class="link-item">Contributed to "Quantum Computer Music: Foundations, Methods and Advanced Concepts" ISBN: 978-3-031-13908-6 </button></a>
-            <a href="https://arxiv.org/abs/2110.12408"><button class="link-item">The chapter titled "Foundations and Initial Experiments" can be found here</button></a>
-            <a href="https://github.com/iccmr-quantum/Miranda_Basak_Demos"><button class="link-item">Python demos to generate music using Qiskit (IBM's quantum computing SDK)</button></a>
-            <a href="https://ieeexplore.ieee.org/document/8812593"><button class="link-item">Masters in Electrical Engineering Thesis published in: 2018 IEEE International Conference on Information and Automation (ICIA)</button></a>
-            <a href="https://open.spotify.com/show/27nrNx0gpXqwcS5hdQgEJr?utm_medium=share&utm_source=linktree"><button class="link-item">FMR Web Radio de l'Alliance Française de Bombay</button></a>
+            <button class="link-item" onclick="redirectToPage('https://link.springer.com/book/10.1007/978-3-031-13909-3')">Contributed to "Quantum Computer Music: Foundations, Methods and Advanced Concepts" ISBN: 978-3-031-13908-6</button>
+
+            <button class="link-item" onclick="redirectToPage('https://arxiv.org/abs/2110.12408')">My chapter from the book titled "Foundations and Initial Experiments" can be found here</button>
+
+            <button class="link-item" onclick="redirectToPage('https://github.com/iccmr-quantum/Miranda_Basak_Demos')">Python demos to generate music using Qiskit (IBM's quantum computing SDK)</button>
+            
+            <button class="link-item" onclick="redirectToPage('https://ieeexplore.ieee.org/document/8812593">Masters in Electrical Engineering Thesis published in: 2018 IEEE International Conference on Information and Automation (ICIA)</button>
+            <button class="link-item" onclick="redirectToPage('https://open.spotify.com/show/27nrNx0gpXqwcS5hdQgEJr?utm_medium=share&utm_source=linktree')">FMR Web Radio de l'Alliance Française de Bombay</button>
         </section>
     </main>
     <footer>
