fixed broken link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <button class="link-item" onclick="redirectToPage('https://github.com/iccmr-quantum/Miranda_Basak_Demos')">Python demos to generate music using Qiskit (IBM's quantum computing SDK)</button>
             
-            <button class="link-item" onclick="redirectToPage('https://ieeexplore.ieee.org/document/8812593">Masters in Electrical Engineering Thesis published in: 2018 IEEE International Conference on Information and Automation (ICIA)</button>
+            <button class="link-item" onclick="redirectToPage('https://ieeexplore.ieee.org/document/8812593')">Masters in Electrical Engineering Thesis published in: 2018 IEEE International Conference on Information and Automation (ICIA)</button>
             <button class="link-item" onclick="redirectToPage('https://open.spotify.com/show/27nrNx0gpXqwcS5hdQgEJr?utm_medium=share&utm_source=linktree')">FMR Web Radio de l'Alliance Française de Bombay</button>
         </section>
     </main>
