removed spotify icon, added new STM32 Link

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <body>
     <header>
         <h1>Suchitra Basak <span class="pronouns">(they/them)</span></h1>
-        <h4>Hardware Design Engineer at a startup, MS in Electrical Engineering, Electronic Musician</h4>
+        <h4>Electronics Design Engineer, MS in Electrical Engineering, Electronic Musician</h4>
         <div class="social-icons">
-            <a href="https://github.com/ladderfilter"><img src="Images/iconmonstr-github-3.svg" alt="Github"></a>
-            <a href="https://www.spotify.com"><img src="Images/iconmonstr-spotify-3.svg" alt="Spotify"></a>
+            <a href="https://github.com/suchitbasak"><img src="Images/iconmonstr-github-3.svg" alt="Github"></a>
             <a href="https://www.linkedin.com/in/suchitra-basak/"><img src="Images/iconmonstr-linkedin-3.svg" alt="LinkedIn"></a>
             <a href="https://twitter.com/suchitrabasak"><img src="Images/iconmonstr-twitter-3.svg" alt="Twitter"></a>
         </div>
     </header>
     <main>
         <section class="links">
+                        <button class="link-item" onclick="redirectToPage('https://github.com/suchitbasak/STM32_Peripherals')">STM32 firmware to integrate sensors, written in C</button>
             <button class="link-item" onclick="redirectToPage('https://link.springer.com/book/10.1007/978-3-031-13909-3')">Contributed to "Quantum Computer Music: Foundations, Methods and Advanced Concepts" ISBN: 978-3-031-13908-6</button>
 
             <button class="link-item" onclick="redirectToPage('https://arxiv.org/abs/2110.12408')">My chapter from the book titled "Foundations and Initial Experiments" can be found here</button>
