--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Suchitra Basak <span class="pronouns">(they/them)</span></h1>
+        <h1>Suchit.ra Basak <span class="pronouns">(they/them)</span></h1>
         <h4>Electronics Design Engineer, MS in Electrical Engineering, Electronic Musician</h4>
         <div class="social-icons">
             <a href="https://github.com/suchitbasak"><img src="Images/iconmonstr-github-3.svg" alt="Github"></a>
